adding buttons to navbar

--- a/printcetnrum_web.client/src/app/navbar/navbar.component.html
+++ b/printcetnrum_web.client/src/app/navbar/navbar.component.html
@@ -1,1 +1,7 @@
-<p>navbar works!</p>
+<mat-toolbar>
+  <nav>
+    <button class="btn btn-primary" [routerLink]="['/']">First Page</button>
+    <button class="btn btn-primary" [routerLink]="['/']">Second Page</button>
+    <button class="btn btn-primary" [routerLink]="['/']">Third Page</button>
+  </nav>
+</mat-toolbar>
