--- a/printcetnrum_web.client/src/app/navbar/navbar.component.css
+++ b/printcetnrum_web.client/src/app/navbar/navbar.component.css
@@ -1,22 +1,95 @@
+/*mat-toolbar {
+  background-color: #0058CC;
+  margin-top: -25px;
+  min-height: 80px;*/ /* Increase this value to make it taller */
+/*}
+
 mat-toolbar nav {
   display: flex;
   align-items: center;
   padding: 0rem !important;
+  height: 100%;*/ /* Ensure the nav items are vertically aligned within the toolbar */
+/*}
+
+mat-toolbar nav a,
+mat-toolbar nav button {
+  margin-right: 16px;
 }
 
-  mat-toolbar nav a,
-  mat-toolbar nav button {
-    margin-right: 16px;
+mat-toolbar nav a:last-child,
+mat-toolbar nav button:last-child {
+  margin-right: 0;
+}*/
+header {
+  padding: 10px;
+  background: #02534d;
+}
+
+.logo {
+  width: 90px;
+}
+
+  .logo:hover {
+    cursor: pointer;
   }
 
-    mat-toolbar nav a:last-child,
-    mat-toolbar nav button:last-child {
-      margin-right: 0;
-    }
-
-mat-toolbar {
-  background-color: var(--siemens-blue);
+.desktop_menu {
+  margin-top: 24px;
 }
 
+.desktop_menu ul {
+  padding: 0;
+  margin: 0;
+}
 
+.desktop_menu ul li {
+  list-style-type: none;
+  color: white;
+  display: inline-block;
+  font-size: 18px;
+  margin-left: 26px;
+}
 
+.desktop_menu ul li:hover {
+  font-size: 19px;
+  font-weight: bold;
+  cursor: pointer;
+  color: yellow;
+  transition: 0.3s ease-in-out;
+}
+
+.menu-icon {
+  display: none;
+}
+
+@media screen and (min-width: 128px) and (max-width: 900px) {
+  .desktop_menu {
+    position: fixed !important;
+    right: -280px;
+    transition: 0.4s ease-in-out;
+    top: 64px;
+    background: #02534d;
+    width: 280px;
+    height: 100%;
+  }
+
+  .desktop_menu ul li {
+    display: block;
+    text-align: left;
+    margin: 0;
+    padding: 10px 0 10px 26px;
+    border-bottom: 1px solid grey;
+  }
+
+  .menu-icon  {
+    display: block;
+    color: lightcoral;
+    font-size: 400px;
+    padding-top: 10px;
+  }
+
+  .mobile_menu {
+    right: 0;
+    transition: 0.4s ease-in-out;
+  }
+}
