--- a/printcetnrum_web.client/src/app/navbar/navbar.component.html
+++ b/printcetnrum_web.client/src/app/navbar/navbar.component.html
@@ -1,7 +1,32 @@
-<mat-toolbar>
+<!--<mat-toolbar>
   <nav>
     <button class="btn btn-primary" [routerLink]="['/']">First Page</button>
     <button class="btn btn-primary" [routerLink]="['/']">Second Page</button>
     <button class="btn btn-primary" [routerLink]="['/']">Third Page</button>
   </nav>
-</mat-toolbar>
+</mat-toolbar>-->
+<header>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3 col-sm-3 col-3">
+        <div class="logo">
+          <img src="assets/hano_logo.png" class="logo" alt="">
+        </div>
+      </div>
+      <div class="col-md-9 col-sm-9 col-9 text-end">
+        <div class="menu-icon" (click)="openMenu()">
+          <i class="{{menu_icon}}"></i>
+        </div>
+        <div class="desktop_menu" [class.mobile_menu]="menuValue">
+          <ul>
+            <li (click)="closeMenu()">Home</li>
+            <li (click)="closeMenu()">About</li>
+            <li (click)="closeMenu()">Settings</li>
+            <li (click)="closeMenu()">Courses</li>
+            <li (click)="closeMenu()">Contact</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</header>
