--- a/printcetnrum_web.client/src/app/navbar/navbar.component.html
+++ b/printcetnrum_web.client/src/app/navbar/navbar.component.html
@@ -5,16 +5,16 @@
     <button class="btn btn-primary" [routerLink]="['/']">Third Page</button>
   </nav>
 </mat-toolbar>-->
+<!--<div class="col-md-3 col-sm-3 col-3">
+  <div class="logo">
+    <img src="assets/hano_logo.png" class="logo" alt="">
+  </div>
+</div>-->
 <header>
   <div class="container">
     <div class="row">
-      <div class="col-md-3 col-sm-3 col-3">
-        <div class="logo">
-          <img src="assets/hano_logo.png" class="logo" alt="">
-        </div>
-      </div>
-      <div class="col-md-9 col-sm-9 col-9 text-end">
-        <div class="menu-icon" (click)="openMenu()">
+      <div class="col-md-9 col-sm-9 col-9">
+        <div class="menu-icon" (click)="openMenu()" >
           <i class="{{menu_icon}}"></i>
         </div>
         <div class="desktop_menu" [class.mobile_menu]="menuValue">
@@ -22,7 +22,7 @@
             <li (click)="closeMenu()">Home</li>
             <li (click)="closeMenu()">About</li>
             <li (click)="closeMenu()">Settings</li>
-            <li (click)="closeMenu()">Courses</li>
+            <li (click)="closeMenu()">Log in</li>
             <li (click)="closeMenu()">Contact</li>
           </ul>
         </div>
