--- a/printcetnrum_web.client/src/app/home-page/home-page.component.html
+++ b/printcetnrum_web.client/src/app/home-page/home-page.component.html
@@ -1,6 +1,7 @@
 <p>home-page works!</p>
 <i class="bi bi-list"></i>
 <button class="btn btn-primary">Click</button>
+<i class="bi-alarm"></i>
 <!--<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Navbar</a>
