--- a/printcetnrum_web.client/src/app/navbar/navbar.component.css
+++ b/printcetnrum_web.client/src/app/navbar/navbar.component.css
@@ -1,25 +1,6 @@
-/*mat-toolbar {
-  background-color: #0058CC;
-  margin-top: -25px;
-  min-height: 80px;*/ /* Increase this value to make it taller */
-/*}
-
-mat-toolbar nav {
-  display: flex;
-  align-items: center;
-  padding: 0rem !important;
-  height: 100%;*/ /* Ensure the nav items are vertically aligned within the toolbar */
-/*}
-
-mat-toolbar nav a,
-mat-toolbar nav button {
-  margin-right: 16px;
-}
-
-mat-toolbar nav a:last-child,
-mat-toolbar nav button:last-child {
-  margin-right: 0;
-}*/
+/*navbar is from
+    https://github.com/chrisira/angular17-responsive-header
+*/
 header {
   padding: 10px;
   background: #3B62D9;
@@ -66,6 +47,10 @@ header {
 
 
 @media screen and (min-width: 128px) and (max-width: 900px) {
+  header {
+    height: 64px;
+  }
+
   .desktop_menu {
     position: fixed !important;
     right: -280px;
@@ -85,13 +70,13 @@ header {
   }
 
   .menu-icon {
-    display: block;
-    color: white;
-    font-size: 40px;
-    padding-top: 10px;
-    text-align: right;
-    /*position: absolute;*/
-    right: 10px;
+    display: block; 
+    color: white; 
+    font-size: 40px; 
+    padding: 10px; 
+    position: absolute; 
+    right: 10px; 
+    top: 10px; 
   }
 
   .mobile_menu {
