adding link to source

--- a/printcetnrum_web.client/src/app/about-page/about-page.component.css
+++ b/printcetnrum_web.client/src/app/about-page/about-page.component.css
@@ -1,3 +1,7 @@
+/*
+    theme is based on the Agency theme by Start Bootstrap
+    https://github.com/startbootstrap/startbootstrap-agency
+*/
 header.masthead {
   padding-top: 10.5rem;
   padding-bottom: 6rem;
