--- a/printcetnrum_web.client/src/app/about-page/about-page.component.html
+++ b/printcetnrum_web.client/src/app/about-page/about-page.component.html
@@ -1,10 +1,13 @@
+<!--theme is based on the Agency theme by Start Bootstrap
+https://github.com/startbootstrap/startbootstrap-agency
+  -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Your Website</title>
-  
+
   <link rel="stylesheet" href="about-page.component.css">
   <link rel="stylesheet" href="../../assets/startbootstrap-agency/styles-agency.css">
   <link rel="stylesheet" href="../../../node_modules/@angular/material/prebuilt-themes/azure-blue.css">
@@ -55,7 +58,7 @@
     </div>
   </section>
 
-  <button mat-icon-button class="go-to-top"  (click)="scrollToTop()">
+  <button mat-icon-button class="go-to-top" (click)="scrollToTop()">
     <mat-icon>arrow_upward</mat-icon>
   </button>
 
