--- a/printcetnrum_web.client/src/app/navbar/navbar.component.html
+++ b/printcetnrum_web.client/src/app/navbar/navbar.component.html
@@ -15,6 +15,7 @@
             <li [routerLink]="['/about']">About</li>
             <li (click)="closeMenu()">...</li>
             <li [routerLink]="['/login']">Log in</li>
+            <li [routerLink]="['/register']">Register</li>
           </ul>
         </div>
       </div>
