finishing register page

--- a/printcetnrum_web.client/src/app/register-page/register-page.component.html
+++ b/printcetnrum_web.client/src/app/register-page/register-page.component.html
@@ -1,1 +1,18 @@
-<p>register-page works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8"> <!-- Character encoding declaration -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Your </title>
+</head>
+<div class="container-fluid h-100">
+  <div id="inner" class="text-center">
+    <h2 class="text-primary mb-4" style="font-size: 36px; font-weight: bold;">Register</h2>
+    <input type="text" class="form-control mb-3" placeholder="Enter your name">
+    <input type="text" class="form-control mb-3" placeholder="Enter your email">
+    <input type="text" class="form-control mb-3" placeholder="Phone number">
+    <input type="password" class="form-control mb-3" placeholder="Enter your password">
+    <input type="password" class="form-control mb-3" placeholder="Repeat your password">
+    <button class="btn custom-btn-outline-gray btn-lg" style="margin-bottom: 25px;" onclick="submitForm()">Create Account</button>
+  </div>
+</div>
