--- a/printcetnrum_web.client/src/app/about-page/about-page.component.html
+++ b/printcetnrum_web.client/src/app/about-page/about-page.component.html
@@ -58,9 +58,9 @@ https://github.com/startbootstrap/startbootstrap-agency
     </div>
   </section>
 
-  <button mat-icon-button class="go-to-top" (click)="scrollToTop()">
+  <!--<button mat-icon-button class="go-to-top" (click)="scrollToTop()">
     <mat-icon>arrow_upward</mat-icon>
-  </button>
+  </button>-->
 
 </body>
 </html>
