--- a/printcetnrum_web.client/src/app/navbar/navbar.component.html
+++ b/printcetnrum_web.client/src/app/navbar/navbar.component.html
@@ -2,6 +2,12 @@
     https://github.com/chrisira/angular17-responsive-header
  -->
 
+<!DOCTYPE html>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Your </title>
+</head>
 <header>
   <div class="container">
     <div class="row">
@@ -22,3 +28,4 @@
     </div>
   </div>
 </header>
+
