--- a/printcetnrum_web.client/src/app/navbar/navbar.component.html
+++ b/printcetnrum_web.client/src/app/navbar/navbar.component.html
@@ -19,6 +19,8 @@
           <ul>
             <li [routerLink]="['/']">Home</li>
             <li [routerLink]="['/about']">About</li>
+            <li [routerLink]="['/edit']">Edit Photo</li>
+            <li [routerLink]="['/upload']">Upload Photo</li>
             <li (click)="closeMenu()">...</li>
             <li [routerLink]="['/login']">Log in</li>
             <li [routerLink]="['/register']">Register</li>
