--- a/printcetnrum_web.client/src/app/edit-photo-page/edit-photo-page.component.html
+++ b/printcetnrum_web.client/src/app/edit-photo-page/edit-photo-page.component.html
@@ -1,1 +1,7 @@
 <p>edit-photo-page works!</p>
+
+<div>
+  <input type="range" min="0" max="200" [(ngModel)]="brightness" />
+  <img [style.filter]="brightnessStyle" src="../../assets/about-pictures/PrintCentrum_foto.jpg" alt="Image" />
+</div>
+
