--- a/printcetnrum_web.client/src/app/login-page/login-page.component.html
+++ b/printcetnrum_web.client/src/app/login-page/login-page.component.html
@@ -12,13 +12,14 @@
     <div id="inner" class="text-center">
       <div class="row">
         <div class="col-md-6 col-sm-12 mb-4">
-          <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+          <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
             <h2 class="text-primary mb-4" style="font-size: 36px; font-weight: bold;">Log in</h2>
+            <!--[ngClass]="{'is-invalid': loginForm.controls['email'].dirty && loginForm.controls['email'].hasError('required')}"-->
+            <input formControlName="surname" type="text" class="form-control mb-3"
+                   placeholder="Enter your name/email">
 
-            <input formControlName="email" type="text" class="form-control mb-3"
-                   [ngClass]="{'is-invalid': loginForm.controls['email'].dirty && loginForm.controls['email'].hasError('required')}" placeholder="Enter your name/email">
-            <small *ngIf="loginForm.controls['email'].dirty && loginForm.controls['email'].hasError('required')" class="text-danger">*Email is required*</small>
-            <small *ngIf="loginForm.controls['email'].dirty && loginForm.controls['email'].hasError('email')" class="text-danger">*Invalid email*</small>
+            <!--<small *ngIf="loginForm.controls['email'].dirty && loginForm.controls['email'].hasError('required')" class="text-danger">*Email is required*</small>
+            <small *ngIf="loginForm.controls['email'].dirty && loginForm.controls['email'].hasError('email')" class="text-danger">*Invalid email*</small>-->
 
             <div class="input-group mb-2">
               <input [type]="isPasswordVisible ? 'text' : 'password'"
