--- a/printcetnrum_web.client/src/app/register-page/register-page.component.html
+++ b/printcetnrum_web.client/src/app/register-page/register-page.component.html
@@ -10,19 +10,29 @@
 <body>
   <div class="container-fluid h-100">
     <div id="inner" class="text-center">
-      <form [formGroup]="registerForm" (ngSubmit)="submitForm()">
+      <form [formGroup]="registerForm" (ngSubmit)="onRegister()">
         <h2 class="text-primary mb-4" style="font-size: 36px; font-weight: bold;">Register</h2>
 
-        <input formControlName="name" type="text" class="form-control mb-3"
-               [ngClass]="{'is-invalid': registerForm.controls['name'].dirty && registerForm.controls['name'].hasError('required')}"
-               placeholder="Enter your name">
-        <small *ngIf="registerForm.controls['name'].dirty && registerForm.controls['name'].hasError('required')" class="text-danger">*Name is required*</small>
+        <input formControlName="firstName" type="text" class="form-control mb-3"
+               [ngClass]="{'is-invalid': registerForm.controls['firstName'].dirty && registerForm.controls['firstName'].hasError('required')}"
+               placeholder="Enter your firstname">
+        <small *ngIf="registerForm.controls['firstName'].dirty && registerForm.controls['firstName'].hasError('required')" class="text-danger">*Firstname is required*</small>
+
+        <input formControlName="lastName" type="text" class="form-control mb-3"
+               [ngClass]="{'is-invalid': registerForm.controls['lastName'].dirty && registerForm.controls['lastName'].hasError('required')}"
+               placeholder="Enter your lastname">
+        <small *ngIf="registerForm.controls['lastName'].dirty && registerForm.controls['lastName'].hasError('required')" class="text-danger">*Lastname is required*</small>
 
         <input formControlName="email" type="text" class="form-control mb-3"
                [ngClass]="{'is-invalid': registerForm.controls['email'].dirty && (registerForm.controls['email'].hasError('required') || registerForm.controls['email'].hasError('email'))}"
                placeholder="Enter your email">
         <small *ngIf="registerForm.controls['email'].dirty && registerForm.controls['email'].hasError('required')" class="text-danger">*Email is required*</small>
         <small *ngIf="registerForm.controls['email'].dirty && registerForm.controls['email'].hasError('email')" class="text-danger">*Invalid email*</small>
+
+        <input formControlName="userName" type="text" class="form-control mb-3"
+               [ngClass]="{'is-invalid': registerForm.controls['userName'].dirty && registerForm.controls['userName'].hasError('required')}"
+               placeholder="Enter your username">
+        <small *ngIf="registerForm.controls['userName'].dirty && registerForm.controls['userName'].hasError('required')" class="text-danger">*Username is required*</small>
 
         <input formControlName="phone" type="text" class="form-control mb-3"
                [ngClass]="{'is-invalid': registerForm.controls['phone'].dirty && registerForm.controls['phone'].hasError('required')}"
