--- a/printcetnrum_web.client/src/app/home-page/home-page.component.html
+++ b/printcetnrum_web.client/src/app/home-page/home-page.component.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"> 
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your </title>
+  <title>User List</title>
 </head>
-<div class="users-table-container">
-  <h2>User List</h2>
+<body>
+  <div class="users-table-container">
+    <h2>User List</h2>
 
-  <table class="table table-striped">
-    <thead>
-      <tr>
-        <th (click)="sortByName()">Name</th>
-        <th (click)="sortByEmail()">Email</th>
-        <th (click)="sortByRole()">Role</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let user of users">
-        <td>{{ user.name }}</td>
-        <td>{{ user.email }}</td>
-        <td>{{ user.role }}</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <!-- Use Angular's (click) binding to trigger sorting functions in the component -->
+          <th (click)="sortByName()">Name</th>
+          <th (click)="sortByEmail()">Email</th>
+          <th (click)="sortByRole()">Role</th>
+        </tr>
+      </thead>
+      <tbody>
+        <!-- Iterate over users using *ngFor, displaying firstName and lastName if applicable -->
+        <tr *ngFor="let user of users">
+          <td>{{ user.firstName }} {{ user.lastName }}</td>
+          <td>{{ user.email }}</td>
+          <td>{{ user.role }}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</body>
+</html>
