--- a/printcetnrum_web.client/src/app/home-page/home-page.component.html
+++ b/printcetnrum_web.client/src/app/home-page/home-page.component.html
@@ -7,26 +7,8 @@
 </head>
 <body>
   <div class="users-table-container">
-    <h2>User List</h2>
+    <h2>Home pageeeeee I have to add sth </h2>
 
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <!-- Use Angular's (click) binding to trigger sorting functions in the component -->
-          <th (click)="sortByName()">Name</th>
-          <th (click)="sortByEmail()">Email</th>
-          <th (click)="sortByRole()">Role</th>
-        </tr>
-      </thead>
-      <tbody>
-        <!-- Iterate over users using *ngFor, displaying firstName and lastName if applicable -->
-        <tr *ngFor="let user of users">
-          <td>{{ user.firstName }} {{ user.lastName }}</td>
-          <td>{{ user.email }}</td>
-          <td>{{ user.role }}</td>
-        </tr>
-      </tbody>
-    </table>
   </div>
 </body>
 </html>
