adding authorization validation and user list is reachable only for registred and logged users

--- a/printcetnrum_web.client/src/app/navbar/navbar.component.html
+++ b/printcetnrum_web.client/src/app/navbar/navbar.component.html
@@ -19,6 +19,7 @@
           <ul>
             <li [routerLink]="['/']">Home</li>
             <li [routerLink]="['/about']">About</li>
+            <li [routerLink]="['/users']">Users</li>
             <li (click)="closeMenu()">...</li>
             <li [routerLink]="['/login']">Log in</li>
             <li [routerLink]="['/register']">Register</li>
