add token authorization to user-list and app module

--- a/printcetnrum_web.client/src/app/users-list-page/users-list-page.component.html
+++ b/printcetnrum_web.client/src/app/users-list-page/users-list-page.component.html
@@ -6,9 +6,10 @@
   <title>User List</title>
 </head>
 <body>
+  
   <div class="users-table-container">
     <h2>User List</h2>
-
+    <h1>{{ userName }}</h1>
     <table class="table table-striped">
       <thead>
         <tr>
