--- a/printcetnrum_web.client/src/app/login-page/login-page.component.html
+++ b/printcetnrum_web.client/src/app/login-page/login-page.component.html
@@ -18,8 +18,8 @@
             <input formControlName="username" type="text" class="form-control mb-3"
                    placeholder="Enter your name/email">
 
-            <!--<small *ngIf="loginForm.controls['email'].dirty && loginForm.controls['email'].hasError('required')" class="text-danger">*Email is required*</small>
-            <small *ngIf="loginForm.controls['email'].dirty && loginForm.controls['email'].hasError('email')" class="text-danger">*Invalid email*</small>-->
+            <small *ngIf="loginForm.controls['username'].dirty && loginForm.controls['username'].hasError('required')" class="text-danger">*Username is required*</small>
+            <!--<small *ngIf="loginForm.controls['email'].dirty && loginForm.controls['email'].hasError('email')" class="text-danger">*Invalid email*</small>-->
 
             <div class="input-group mb-2">
               <input [type]="isPasswordVisible ? 'text' : 'password'"
