--- a/printcetnrum_web.client/src/app/about-page/about-page.component.html
+++ b/printcetnrum_web.client/src/app/about-page/about-page.component.html
@@ -9,8 +9,8 @@ https://github.com/startbootstrap/startbootstrap-agency
   <title>Your Website</title>
 
   <link rel="stylesheet" href="about-page.component.css">
-  <link rel="stylesheet" href="../../assets/startbootstrap-agency/styles-agency.css">
-  <link rel="stylesheet" href="../../../node_modules/@angular/material/prebuilt-themes/azure-blue.css">
+  <!--<link rel="stylesheet" href="../../assets/startbootstrap-agency/styles-agency.css">
+  <link rel="stylesheet" href="../../../node_modules/@angular/material/prebuilt-themes/azure-blue.css">-->
   <!--<link rel="stylesheet" href="../../../node_modules/startbootstrap-agency/dist/css/styles.css">-->
 </head>
 <body>
