--- a/printcetnrum_web.client/src/app/login-page/login-page.component.html
+++ b/printcetnrum_web.client/src/app/login-page/login-page.component.html
@@ -68,7 +68,7 @@
     </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" (click)="modal.dismiss('Close click')">Close</button>
-        <button type="button" class="btn btn-primary" (click)="saveChanges()">Send Reset Link</button>
+        <button type="button" class="btn btn-primary" (click)="sendResetLink()">Send Reset Link</button>
       </div>
 </ng-template>
 </body>
