--- a/printcetnrum_web.client/src/app/upload-photo-page/upload-photo-page.component.html
+++ b/printcetnrum_web.client/src/app/upload-photo-page/upload-photo-page.component.html
@@ -1,5 +1,5 @@
 <div class="upload-container">
-  <h1>Upload Photo</h1>
+  <h1 class="text-primary mb-4" style="font-size: 36px; font-weight: bold;">Upload Image</h1>
 
   <!-- File input -->
   <div class="file-input">
