--- a/printcetnrum_web.client/src/app/navbar/navbar.component.html
+++ b/printcetnrum_web.client/src/app/navbar/navbar.component.html
@@ -21,6 +21,7 @@
             <li [routerLink]="['/about']">About</li>
             <li [routerLink]="['/edit']">Edit Photo</li>
             <li [routerLink]="['/upload']">Upload Photo</li>
+            <li [routerLink]="['/userFiles']">Your Files</li>
             <li *ngIf="isLoggedIn" [routerLink]="['/users']">Users</li>
             <li (click)="closeMenu()">...</li>
             <li [routerLink]="['/login']">Log in</li>
