creating order implementation

--- a/printcetnrum_web.client/src/app/user-files/user-files.component.html
+++ b/printcetnrum_web.client/src/app/user-files/user-files.component.html
@@ -1,6 +1,7 @@
 <div class="file-actions-row">
   <button class="btn btn-primary" [routerLink]="['/upload']">Upload New File</button>
   <button class="btn btn-primary" [routerLink]="['/newOrder']">Create New Order</button>
+  <button class="btn btn-primary" [routerLink]="['/allOrders']">All Orders</button>
   <button class="btn btn-primary">My Orders</button>
 </div>
 
