--- a/printcetnrum_web.client/src/app/upload-photo-page/upload-photo-page.component.css
+++ b/printcetnrum_web.client/src/app/upload-photo-page/upload-photo-page.component.css
@@ -1,17 +1,80 @@
 .upload-container {
-  text-align: center;
   max-width: 600px;
-  margin: 0 auto;
+  margin: auto;
+  background-color: #f9f9f9;
+  border-radius: 10px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  padding: 20px 30px;
+}
+
+.title {
+  font-size: 32px;
+  font-weight: bold;
+  color: #007bff;
+  margin-bottom: 20px;
 }
 
 .file-input {
-  margin: 20px 0;
+  margin-bottom: 20px;
 }
 
+.custom-file-upload {
+  padding: 12px 20px;
+  font-size: 16px;
+  color: #fff;
+  background-color: #007bff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  display: inline-block;
+}
+
+  .custom-file-upload:hover {
+    background-color: #0056b3;
+  }
+
+#file-upload {
+  display: none;
+}
+
+.file-list {
+  text-align: left;
+  margin-bottom: 20px;
+}
+
+.file-list-title {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.file-list ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+  .file-list ul li {
+    padding: 5px 0;
+    font-size: 14px;
+    border-bottom: 1px solid #ddd;
+  }
+
+    .file-list ul li:last-child {
+      border-bottom: none;
+    }
+
+    .file-list ul li i {
+      margin-right: 8px;
+      color: #007bff;
+    }
+
 .upload-button button {
+  font-size: 16px;
+  font-weight: bold;
   padding: 10px 20px;
   background-color: #007bff;
-  color: white;
+  color: #fff;
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -22,19 +85,19 @@
     cursor: not-allowed;
   }
 
-.uploaded-image {
-  margin-top: 20px;
-}
-
-  .uploaded-image img {
-    max-width: 100%;
-    height: auto;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    padding: 10px;
+  .upload-button button:hover:not(:disabled) {
+    background-color: #0056b3;
   }
 
 .error-message {
-  color: red;
-  margin-top: 10px;
+  margin-top: 15px;
+  color: #d9534f;
+  font-size: 14px;
 }
+
+.app-notification-success {
+  background-color: green !important; /* Green background */
+  color: white !important; /* White text */
+  font-weight: bold; /* Optional: makes the text bold */
+}
+
