--- a/printcetnrum_web.client/src/app/user-files/user-files.component.html
+++ b/printcetnrum_web.client/src/app/user-files/user-files.component.html
@@ -24,7 +24,21 @@
         {{ file.shouldPrint ? 'Unmark' : 'Mark for Print' }}
       </button>
       <button *ngIf="isImage(file.extension)" class="btn btn-secondary" (click)="editFile(file.id)">Edit</button>
-      <button class="btn btn-danger" (click)="deleteFile(file.id)">Remove</button>
+      <button class="btn btn-danger" (click)="openDeleteModal(file.id, deleteModal)">Remove</button>
     </div>
   </div>
 </div>
+
+<ng-template #deleteModal let-modal>
+  <div class="modal-header">
+    <h5 class="modal-title">Confirm Deletion</h5>
+    <button type="button" class="btn-close" (click)="modal.dismiss('Close click')"></button>
+  </div>
+  <div class="modal-body">
+    <p>Are you sure you want to delete this file?</p>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-secondary" (click)="modal.dismiss('Close click')">Cancel</button>
+    <button type="button" class="btn btn-danger" (click)="confirmDelete()">Delete</button>
+  </div>
+</ng-template>
